--- a/app/webroot/sass/_components/_routes.scss
+++ b/app/webroot/sass/_components/_routes.scss
@@ -14,6 +14,7 @@
 		align-items: center;
 		flex: 1 1 auto;
 		justify-content: space-between;
+		text-align: center;
 	}
 
 	abbr {
